<resources>
    <string name="app_name">Kalamazoo Vapor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_juice_list">Juice List</string>
    <string name="title_activity_promotions">Promotion/!</string>
    <string name="title_activity_advanced_users">Advanced Users</string>
    <string name="title_activity_money_saver">Money Saver</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_what_did_iget">What Did I Get/?</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_juice_tour">Juice Tour</string>
    <string name="title_activity_juice_details">Juice Detail</string>
    <string name="btnJuiceList">Juice List</string>
    <string name="btnPromotions">Promotions</string>
    <string name="btnAdvancedUsers">Advanced Users</string>
    <string name="btnInformation">Information</string>
    <string name="btnMoneySaver">Money Saver</string>
    <string name="btnLocations">Locations</string>
    <string name="btnWhatDidIGet">What Did I Get</string>
    <string name="btnJuiceTour">Juice Tour</string>
    <string name="image_header">kzoo vapor logo</string>
    <string name="resistanceCalc">Resistance Calculator</string>
    <string name="txtWireType">Wire Type</string>
    <string name="txtWireLength">Length</string>
    <string name="txtWireGauge">Wire Gauge</string>
    <string name="txtWrappingTool">Wrapping Tool</string>
    <string name="txtNumCoils"># of Coils</string>
    <string name="txtNumWraps"># of Wraps</string>
    <string name="btnCalculate">Calculate</string>
    <string name="txtCoilResistance">Your coil will have a resistance of:</string>
    <string name="unknown">Unknown</string>
    <string name="strPromo">Promotions</string>
    <string name="strWhatDidIGet">What Did I Get</string>
    <string name="SoFarSaved">Your savings are:</string>
    <string name="InitialCost">Inital Cost of Supplies</string>
    <string name="CostPerMil">Cost Per Millileter</string>
    <string name="AmountPerMil">Millileters</string>
    <string name="EJuicePerWeek">Amount of E-Juice Per Week</string>
    <string name="CostPerPack">Cost Per Pack</string>
    <string name="PacksPerWeek">Packs per week:</string>
    <string name="mnySaverImg">money saver image</string>
    <string name="imagedisc">holder for image</string>
    <string name="hintName">Name</string>
    <string name="hintManufacturer">Manufacturer</string>
    <string name="portage">4129 Portage Rd.\nKalamazoo, MI 49001/nPhone: 269-343-4800\nHours: Monday-Friday 9am-8pm
        \nSaturday 11am-8pm\nSunday 12-5pm</string>
    <string name="westmain">5041 West Main St.\nKalamazoo, MI 49009\nPhone: 269-743-6138\nHours: Monday-Friday 9am-8pm
        \nSaturday 11am-8pm\nSunday 12-5pm</string>
    <string name="grandrapids">4761 Lake Michigan Dr.\nGrand Rapids, MI 49534\nPhone: 616-608-6326\nHours: Monday-Friday 9am-8pm
        \nSaturday 11am-8pm\nSunday 12-5pm</string>
    <string name="lincon">1879 Southfield Rd.\nLincoln Park, MI 48146\nPhone: 313-254-9133\nHours: Monday-Saturday 10am-8pm
        \nSunday 12pm-5pm</string>
    <string name="saginaw">3037 Bay Plaza Dr.\nSaginaw, MI 48604\nPhone: 989-401-6939\nHours: Monday-Saturday 10am-8pm
        \nSunday 12pm-5pm</string>
    <string name="lansing">340 Morgan Lane\nLansing, MI 48912\nPhone: 517-203-5956\nHours: Monday-Saturday 10am-8pm
        \nSunday 12pm - 5pm</string>
    <string name="mentor">9201 Mentor Ave.\nMentor, OH  44060\nPhone: 440-205-0997\nHours: Monday-Saturday 11am-9pm
        \nSunday 12pm-6pm</string>
    <string name="parma">6339 Olde York Road\nParma Heights, OH 44130\nPhone: 440-481-3867\nHours: Monday-Saturday 11am-9pm
        \nSunday 12pm-6pm</string>
    <string name="lynd">5118 Mayfield Rd.\nLyndhurst, OH 44124\nPhone: 440-683-4857\nHours: Monday-Saturday 11am-9pm
        \nSunday 12pm-6pm</string>
</resources>