<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wmich.edu.team3_kzoovapor.MoneySaverActivity">


    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/imageViewMoneySaver"
        android:id="@+id/gridLayoutMoneySaver">

        <TextView
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/PacksPerWeek"
            android:id="@+id/textViewPacksPerWeek"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/AppTheme"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextPacksPerWeek"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/CostPerPack"
            android:id="@+id/textViewCostPerPack"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextCostPerPack"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/EJuicePerWeek"
            android:id="@+id/textViewJuicePerWeek"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextJuicePerWeek"
            android:layout_row="2"
            android:layout_column="1"
            android:hint="@string/AmountPerMil"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/CostPerMil"
            android:id="@+id/textViewCostPerMillileter"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="#ff000000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextCostPerMillileter"
            android:layout_row="3"
            android:layout_column="1"
            android:textColor="#ff000000" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="4"
            android:layout_column="0" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="4"
            android:layout_column="1" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="5"
            android:layout_column="0" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="5"
            android:layout_column="1" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="6"
            android:layout_column="0" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="6"
            android:layout_column="1" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="7"
            android:layout_column="0" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_row="7"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/SoFarSaved"
            android:id="@+id/textViewSoFarSaved"
            android:layout_row="8"
            android:layout_column="0"
            android:textColor="#ff000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewSavedTotal"
            android:layout_row="8"
            android:layout_column="1"
            android:textColor="#ff000000" />
    </GridLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/imageViewMoneySaver"
        android:src="@drawable/moneysaver"
        android:contentDescription="@string/mnySaverImg" />

</RelativeLayout>
