<!--
*************************************
* Programmers: Bryan Minton, Jonathan Trapane,
*              Anson Richardson
* Final Project: Kalamazoo Vapor App
* CIS 4700: Mobile Commerce Development
* Spring 2015
* Due date: 4/28/15
* Date completed: 4/28/15
*************************************
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgrnd">

    <!-- Imageview for kvs logo. Width and height
    wrap content. Id is kvsLogoAdvanced. Src is kvs_logo.
    Gravity is centered horizontally and is aligned with
    top of parent. Top padding of 10dp. -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kvsLogoAdvanced"
        android:src="@drawable/kvs_logo"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />

    <!-- Textview to display activity title. Wraps
    content. Large text appearance. Displays string
    "resistanceCalc". Id is textViewResistanceCalc.
    Centered horizontally and laid out below
    "kvsLogoAdvanced". -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resistanceCalc"
        android:id="@+id/textViewResistanceCalc"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/kvsLogoAdvanced"
        android:layout_centerHorizontal="true" />

    <!-- Gridlayout to display advanced user texts. Fills
    parent and aligned to the left with a margin of 10dp. -->

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewResistanceCalc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp">

        <!-- Textview for wire type. Wraps content.
         Calls string "txtWireType". Id is "textViewWireType".
         Row 0 and column 0. Textsize 18sp. Top padding
         is 12dp. -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWireType"
            android:id="@+id/textViewWireType"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="18sp"
            android:paddingTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWireGauge"
            android:id="@+id/textViewWireGauge"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="18sp"
            android:paddingTop="12dp" />

        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerWireGauge"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWrappingTool"
            android:id="@+id/textViewWrapTool"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="18sp"
            android:paddingTop="12dp" />

        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerWrapTool"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNumWraps"
            android:id="@+id/textViewWraps"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="18sp"
            android:paddingTop="12dp" />

        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerWireType"
            android:entries="@array/wire_arrays"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/border" />

        <EditText
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextWraps"
            android:layout_row="3"
            android:layout_column="1"
            android:text="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNumCoils"
            android:id="@+id/textViewCoils"
            android:layout_row="4"
            android:layout_column="0"
            android:paddingTop="12dp"
            android:textSize="18sp" />

        <EditText
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextCoils"
            android:layout_row="4"
            android:layout_column="1"
            android:text="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate!"
            android:id="@+id/buttonCalc"
            android:layout_row="5"
            android:layout_column="1"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewResult"
            android:layout_row="6"
            android:layout_column="1"
            android:paddingTop="10dp"
            android:textSize="18sp" />

    </GridLayout>

</RelativeLayout>